--- a/ecommerce_web/appsettings.json
+++ b/ecommerce_web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:DESKTOP-CTTVL5I\\MSSQLSERVER04;Database=ecommerce;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
