added category migration

--- a/ecommerce_web/appsettings.json
+++ b/ecommerce_web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:DESKTOP-CTTVL5I\\MSSQLSERVER04;Database=ecommerce;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-CTTVL5I\\MSSQLSERVER04;Database=ecommerce;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
  
